# kinfu_stereo

./: CMakeLists.txt  manifest.xml  nodelet_plugins.xml
src/: kinfu_stereo_app.cpp  safe_call.hpp
src/nodelets/: depth_map.cpp
src/nodes/: depth_map.cpp
